Add load and production values sum to sld legend (#182)
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>